--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ chrono = { version = "0.4", features = ["serde"]}
 env_logger = "0.10.0"
 jsonwebtoken = "9.1.0"
 argon2 = "0.5.2"
+log = { version = "0.4.20", features = ["serde"] }
