--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
-version: '3.8'
+version: '3'
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
   db:
     container_name: postgres
     image: postgres:14.7-alpine
