Fix database connection issue

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:password@localhost:5432/bagetdb
+DATABASE_URL=postgresql://postgres:password@db:5432/bagetdb
 JWT_SECRET=lethaveatoastforthedouchebag
