--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     image: postgres:14.7-alpine
     restart: always
     environment:
+      POSTGRES_DB: bagetdb
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     volumes:
